# python-flask-basic

./: .coverage  .env  .gitignore  Dockerfile  README.md  alembic.ini  conda-run-entrypoint.sh  conda-run-tests.sh  config.yaml  create-rabbitmq-run.sh  create-topic-got.sh  create-topic-run.sh  create_virtual_env.sh  docker-build.sh  docker-compose.yml  docker-run.sh  docker-test.sh  main.py  pyproject.toml  pytest.sh  read_config.sh  requirements.txt  service_start.sh
.github/workflows/: build-and-test.yml
Controller/: api_controller.py
alembic/versions/: 028c7780940b_.py  19d3f4d30abb_first_migrations.py  5579a9260d41_first_migrations.py  61cff5f8f1a8_.py  80ab07700b0c_first_migrations.py  a42b17e93c30_.py  b6129056dfe7_add_email_field.py  c0366e48ab4a_first_migrations.py  e2ca050039eb_add_email_field.py  e956fed80955_first_migrations.py  f94b08cbc79d_first_migrations.py
api/: __init__.py  job_arg.py  wsgi.py
api/controller/: api_controller.py
api/openapi/: swagger.yml
api/repository/: README.md  model.py  repo.py  schema.py  transaction.py
config/: config.py  log_config.py
job/: es_job.py  job.py  kafka_job.py  rabbitmq_job.py
log_track/: logstash_udp.conf
openapi/: swagger.yml
tests/: __init__.py  conftest.py  pytest.ini  test_api.py  test_elasticsearch.py
tests/test_mapping/: performance_metrics_mapping.json  search_ngram_mapping.json
tools/rabbitmq/: rabbitmq-producer.py
